# TempoCache

./: .gitignore  LICENSE  README.md  pyproject.toml
legacy_Benchmark/: bench_tempocache_mvp.py  bench_tempocache_spikingjelly_eval.py  bench_tempocache_spikingjelly_smoke.py
legacy_Tests/: test_cache_state.py  test_full_equivalence.py  test_router.py  test_spikingjelly_patch_smoke.py  test_tempo_conv2d.py
legacy_tempocache/config/: default_config.py
legacy_tempocache/integration/: model_patcher.py  spikingjelly_adapter.py
legacy_tempocache/ops/: tempo_conv2d.py
legacy_tempocache/runtime/: cache_state.py  profiler.py  router.py  signature_extractor.py
legacy_tempocache/utils/: io.py  module_utils.py  seed.py  timing.py
src/tempocache/: __init__.py  config.py  enums.py  registry.py  typing.py  version.py
src/tempocache/benchmark/: __init__.py  bench_attention.py  bench_model.py  bench_operator.py  smoke.py
src/tempocache/cli/: main.py
src/tempocache/core/: __init__.py  base.py  cache_state.py  diagnostics.py  distance.py  executor_base.py  router.py
src/tempocache/executors/: __init__.py  attention.py  conv.py  linear.py  pairwise.py
tests/: test_cache_state.py  test_distance.py  test_fx_rewriter.py  test_patcher.py  test_router.py  test_signature_attention.py  test_signature_pairwise.py  test_signature_spatial.py  test_signature_vector.py  test_tempo_attention.py  test_tempo_conv_family.py  test_tempo_linear.py  test_tempo_matmul_bmm.py  test_toy_cnn_integration.py  test_toy_res_integration.py  test_toy_transformer_integration.py
(+30 files in other folders)
