[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TempoCache"
version = "0.1.0"
description = "Similarity-driven temporal selective execution toolkit/runtime for SNN inference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TempoCache Team" }]
dependencies = [
  "torch>=2.1.0",
  "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
tempocache = "tempocache.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["tempocache*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
